--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IM Report Tracker</title>
 </head>
 <body>
-    <h2>testestestestestestestestestset</h2>
+    <h2>reporting test</h2>
     
 </body>
 </html>
