Added functionality to add and view reports in the webpage, all working so far but I'm getting dupe records when py is run

--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -6,7 +6,18 @@
     <title>IM Report Tracker</title>
 </head>
 <body>
-    <h2>reporting test</h2>
-    
+    <h1>Reports</h1>
+    <ul>
+        {% for report in reports %}
+            <li>
+                {{ report.Investment_advisor_name }}
+                <br>
+                Fund: {{ report.fund_name }}
+                <br>
+                Status: {{ report.status }}
+            </li>
+            <hr>
+        {% endfor %}
+    </ul>
 </body>
 </html>
