--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -14,5 +14,31 @@
       </p>
       <hr>
     {% endfor %}
+    
+    <h2>Add New Report</h2>
+<form action="/submit_report" method="post">
+  <label for="Investment_advisor_name">Investment Advisor Name:</label><br>
+  <input type="text" name="Investment_advisor_name"><br>
+
+  <label for="fund_name">Fund Name:</label><br>
+  <input type="text" name="fund_name"><br>
+
+  <label for="sub_fund_name">Sub Fund Name:</label><br>
+  <input type="text" name="sub_fund_name"><br>
+
+  <label for="delegate_name">Delegate Name:</label><br>
+  <input type="text" name="delegate_name"><br>
+
+  <label for="reporting_period">Reporting Period:</label><br>
+  <input type="text" name="reporting_period"><br>
+
+  <label for="status">Status:</label><br>
+  <input type="text" name="status"><br>
+
+  <label for="comments">Comments:</label><br>
+  <input type="text" name="comments"><br><br>
+
+  <input type="submit" value="Submit">
+</form>
 </body>
 </html>
