--- a/flask_webapp/templates/index.html
+++ b/flask_webapp/templates/index.html
@@ -31,7 +31,10 @@
       <td>{{ report.status }}</td>
       <td>{{ report.comments }}</td>
       <td>
-        <a href="{{ url_for('edit_report', report_id=report.id) }}">Edit</a>
+      <a href="{{ url_for('edit_report', report_id=report.id) }}">Edit</a>
+        <form method="POST" action="{{ url_for('delete_report', report_id=report.id) }}" style="display:inline;">
+        <button type="submit">Delete</button>
+        </form>
       </td>
     </tr>
     {% endfor %}
